Fixed scroll on mobile

--- a/css/grayscale.scss
+++ b/css/grayscale.scss
@@ -241,6 +241,9 @@ a {
             }
         }
     }
+    @media(max-width:767px) {
+        background-attachment: scroll;
+    }
 }
 
 .button {
